[gd_scene load_steps=4 format=3 uid="uid://b74yen3xdm85o"]

[ext_resource type="Script" path="res://scripts/page_base.gd" id="1_lfl2k"]
[ext_resource type="PackedScene" uid="uid://beneqpcnms27p" path="res://scenes/beastiary pages/_page_base.tscn" id="2_wfhrj"]
[ext_resource type="Theme" uid="uid://bw2dm0g8j123d" path="res://themes/beastiary_writing.tres" id="3_8rvan"]

[node name="template" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lfl2k")
metadata/_edit_use_anchors_ = true

[node name="page_base" parent="." instance=ExtResource("2_wfhrj")]
layout_mode = 1

[node name="Contents" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="entry name" type="Label" parent="Contents"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -518.0
offset_top = -388.0
offset_right = -142.0
offset_bottom = -335.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_8rvan")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Table of Contents"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Contents"]
layout_mode = 0
offset_left = -663.0
offset_top = -318.0
offset_right = -49.0
offset_bottom = 378.0
theme = ExtResource("3_8rvan")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
text = "* Flora
	1.
	2.
	3.
* Passive Fauna
* Hostile Fauna"

[node name="book_worms" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="level_1" type="Sprite2D" parent="book_worms"]
visible = false

[node name="level_2" type="Sprite2D" parent="book_worms"]
visible = false

[node name="level_3" type="Sprite2D" parent="book_worms"]
visible = false
